Cluster_Setup/tailscale-ingress.yaml
# tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
  tls:
    - hosts:
        # Tên này sẽ biến thành faaschart.[tailnet-của-bạn].ts.net
        - faaschart
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: openfaas
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 9999
  tls:
    - hosts:
        - faasportal
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # Nhớ kỹ tên service này là prometheus-server nhé
                name: prometheus-server
                port:
                  number: 80
  tls:
    - hosts:
        # Tên này sẽ biến thành faasmetrics.[tailnet-của-bạn].ts.net
        - faasmetrics
